clusters/on-prem/apps/media/calibre/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre
  namespace: media
  labels:
    app: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre
  serviceName: calibre
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
      - name: calibre-web
        image: lscr.io/linuxserver/calibre:latest@sha256:4a1f1f9adcee133b374dc9ea783b6b735844313f99c65fb62cb15cc0089d1948
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: config
            mountPath: /config
          - name: books
            mountPath: /books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-pvc
        - name: books
          hostPath:
            path: /mnt/media/books
            type: DirectoryOrCreate
